// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberList renders with default props with default non-server search 1`] = `
<FlatList
  ListFooterComponent={null}
  ListHeaderComponent={
    <View>
      <View>
        <View>
          <Icon
            name="Search"
            size={30}
          />
          <Component
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Search Members"
            rejectResponderTermination={true}
            underlineColorAndroid="transparent"
          />
        </View>
        <PopupMenuButton
          actions={Array []}
        >
          <View>
            <Text />
            <Icon
              name="ArrowDown"
            />
          </View>
        </PopupMenuButton>
      </View>
    </View>
  }
  data={
    Array [
      Object {
        "id": "1",
        "name": "Loren",
      },
      Object {
        "id": "2",
        "name": "Robbie",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns="2"
  onEndReached={false}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`MemberList runs call for new results if server search 1`] = `
<FlatList
  ListFooterComponent={null}
  ListHeaderComponent={
    <View>
      <View>
        <View>
          <Icon
            name="Search"
            size={30}
          />
          <Component
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Search Members"
            rejectResponderTermination={true}
            underlineColorAndroid="transparent"
          />
        </View>
        <PopupMenuButton
          actions={Array []}
        >
          <View>
            <Text />
            <Icon
              name="ArrowDown"
            />
          </View>
        </PopupMenuButton>
      </View>
    </View>
  }
  data={
    Array [
      Object {
        "id": "1",
        "name": "Loren",
      },
      Object {
        "id": "2",
        "name": "Robbie",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns="2"
  onEndReached={[Function]}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`MemberList server search fetches new results when search provided 1`] = `
<RCTScrollView
  ListFooterComponent={null}
  ListHeaderComponent={
    <View>
      <View>
        <View>
          <Icon
            name="Search"
            size={30}
          />
          <Component
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Search Members"
            rejectResponderTermination={true}
            underlineColorAndroid="transparent"
          />
        </View>
        <PopupMenuButton
          actions={Array []}
        >
          <View>
            <Text />
            <Icon
              name="ArrowDown"
            />
          </View>
        </PopupMenuButton>
      </View>
    </View>
  }
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View>
        <View>
          <View>
            <Icon
              name="Search"
              size={30}
            />
            <TextInput
              allowFontScaling={true}
              onChangeText={[Function]}
              placeholder="Search Members"
              rejectResponderTermination={true}
              underlineColorAndroid="transparent"
            />
          </View>
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 5,
                "left": 5,
                "right": 5,
                "top": 5,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <Text />
              <Icon
                name="ArrowDown"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
